tests/errors/unresolved.vir
// Tests for UnresolvedType, UnresolvedComponent (in a driver), and
// Unknown component (in an expression).

// A port whose type annotation names a type that does not exist.
mod BadPortType {
    // CHECK: Unresolved type NoSuchType
    incoming inp : NoSuchType;
    outgoing out : Bit;
    out := true;
}

// A driver statement that names a component that does not exist in this module.
mod BadDriverTarget {
    outgoing out : Bit;
    out := true;
    // CHECK: Unresolved component ghost
    ghost := true;
}

// An expression that references a name that is not a declared component.
mod BadExprRef {
    outgoing out : Bit;
    // CHECK: Unknown component
    out := doesnt_exist;
}

// Builtin types (Bit, Word[n], Clock) resolve fine — no UnresolvedType.
mod GoodTypes {
    incoming clk  : Clock;
    incoming data : Word[8];
    incoming flag : Bit;
    outgoing out  : Bit;
    // CHECK-NOT: Unresolved type
    out := flag;
}

// CHECK: Check failed
